--- a/index.html
+++ b/index.html
@@ -59,17 +59,18 @@
             </li>
           </ul>
         </address>
-        <button class="menu-btn">
+
+        <!-- mobile menu -->
+        <button class="menu-btn js-open-menu">
           <svg class="menu-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
       </div>
-      <!-- mobile menu -->
 
-      <div class="mobile-menu">
+      <div class="mobile-menu js-menu">
         <div class="container mob-menu-cont">
-          <button class="menu-close">
+          <button class="menu-close js-close-menu">
             <svg class="menu-close-icon" width="8" height="8">
               <use href="./images/icons.svg#x"></use>
             </svg>
@@ -80,7 +81,7 @@
               <a class="menu-link active" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#portfolio">Portfolio</a>
+              <a class="menu-link" href="">Portfolio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link" href="">Contacts</a>
@@ -972,6 +973,7 @@
         </form>
       </div>
     </div>
+    <script src="./js/menu-index.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
